# HOA-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  retrieve.py  server.py  vector_db.pkl
data/: Children under eight.txt  hoa-regulations.txt
src/hoa_mcp_server/: __init__.py  server.py  vectorize.py
tools/: retrieve.py  vectorize.py
